# mcp-protect

./: README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: pypi-release.yml
src_node/: index.ts
src_py/mcp_protect/: server.py
