[project]
name = "mcp-protect"
dynamic = ["version"]
description = "SquatGuard MCP Template for Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.26.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]

[project.scripts]
mcp-protect = "mcp_protect.server:main"

[project.urls]
Homepage = "https://github.com/squatguard/mcp-protect"
Documentation = "https://github.com/squatguard/mcp-protect/blob/main/README.md"
Repository = "https://github.com/squatguard/mcp-protect"
Issues = "https://github.com/squatguard/mcp-protect/issues"

[tool.hatch.version]
path = "src_py/mcp_protect/__init__.py"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src_py/mcp_protect"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["README.md"]

[tool.ruff.lint]
select = [
    "C4",   # flake8-comprehensions
    "C90",  # mccabe
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "PERF", # Perflint
    "PL",   # Pylint
    "UP",   # pyupgrade
]
ignore = ["PERF203", "PLC0415", "PLR0402"]
mccabe.max-complexity = 24 # Default is 10

[tool.ruff.lint.pylint]
allow-magic-value-types = ["bytes", "float", "int", "str"]
max-args = 23                                              # Default is 5
max-branches = 23                                          # Default is 12
max-returns = 13                                           # Default is 6
max-statements = 102                                       # Default is 50